# IntegratingFusing

./: CMakeLists.txt
include/: EKFEigen.h  EKFR.h  EKFSimple.h  MYEKF.h
scripts/: PlotAxis3D.py  PlotOnline.py  ShowSourceData.py
src/: AxisTestForSophus.cpp  IntegratingIMUDemo.cpp  SimpleCopyZUPT.cpp  TracePlot3d.cpp  TraceShowDynamic.cpp
